# agrolab_robot

./: README.md
agrolab_controller/: CMakeLists.txt  package.xml
agrolab_controller/launch/: main.launch  moving.launch  search_node.launch
agrolab_controller/src/: controller_node.cpp  moving_regulator_node.py  search_node.py
agrolab_description/: CMakeLists.txt  package.xml
agrolab_description/config/: config.yaml
agrolab_description/launch/: display.launch
agrolab_description/meshes/: Z.stl  light.stl  link7.dae  stand.stl  water_tank.dae  water_tank.stl
agrolab_description/urdf/: agrolab.urdf
agrolab_description/worlds/: apple_world.world.xml
apple_detector/: CMakeLists.txt  package.xml
apple_detector/launch/: apple_detector.launch
apple_detector/scripts/: apple_detector_node.py
state_machine/: CMakeLists.txt  package.xml
state_machine/launch/: state_machine.launch  system.launch
state_machine/scripts/: state_machine_node.py
